@@ -340,6 +340,7 @@ struct matroska_track_s {
 #define MATROSKA_CODEC_ID_S_SSA          "S_SSA"         /* deprecated */
 #define MATROSKA_CODEC_ID_S_ASS          "S_ASS"         /* deprecated */
 #define MATROSKA_CODEC_ID_S_VOBSUB       "S_VOBSUB"
+#define MATROSKA_CODEC_ID_S_HDMV_PGS     "S_HDMV/PGS"
 
 /* block lacing */
 #define MATROSKA_NO_LACING               0x0
