@@ -34,6 +34,11 @@
 #include <stdarg.h>
 #include <ctype.h>
 
+#ifdef _MSC_VER
+#define snprintf sprintf_s
+#define strcasecmp stricmp
+#endif
+
 #define LOG_MODULE "xmlparser"
 #define LOG_VERBOSE
 /*
@@ -831,13 +836,14 @@ char *xml_escape_string (const char *s, xml_escape_quote_t quote_type)
 }
 
 static void xml_parser_dump_node (const xml_node_t *node, int indent) {
+  size_t l;
 
   xml_property_t *p;
   xml_node_t     *n;
 
   printf ("%*s<%s ", indent, "", node->name);
 
-  size_t l = strlen (node->name);
+  l = strlen (node->name);
 
   p = node->props;
   while (p) {
